# music-generation

./: .docker-run.sh.swp  .gitignore  Dockerfile  README.md  docker-run.sh  get_model.py  main.py  music-gen-test.ipynb  music-gen-test2.ipynb  oldmain.py  pyproject.toml  testbed.ipynb
Unity/: AudioRequest.cs  MusicGen-Pkg.unitypackage
