[tool.poetry]
name = "music-gen-experiment"
version = "0.1.0"
description = ""
authors = ["Gregory Horvath <gphorvath@gameshenanigans.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.97.0"
audiocraft = "^0.0.1"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
torch = [
    {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl", platform = "linux", python = ">=3.10 <3.11"},
]
torchaudio = [
    {url = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.2%2Bcu118-cp310-cp310-linux_x86_64.whl", platform = "linux", python = ">=3.10 <3.11"},
]
#triton = "^2.0.0"
#cuda-python = "^12.1.0"
transformers = "^4.31"
scipy = "^1.11.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
